2011-03-24  Mihai Parparita  <mihaip@chromium.org>

Reviewed by James Robinson.

        [Chromium] Vertical Japanese text is not displayed on Snow Leopard
        https://bugs.webkit.org/show_bug.cgi?id=56962

        Pixel rebaselines after r80582 (vertical text was shifted by one pixel
        vertical).

        Make Snow Leopard check added by r80740 into a runtime check for
        Chromium, since it uses the same binary on both Leopard and Snow Leopard.

        * platform/chromium-mac/fast/blockflow/Kusa-Makura-background-canvas-expected.checksum:
        * platform/chromium-mac/fast/blockflow/Kusa-Makura-background-canvas-expected.png:
        * platform/chromium-mac/fast/blockflow/border-vertical-lr-expected.checksum:
        * platform/chromium-mac/fast/blockflow/border-vertical-lr-expected.png:
        * platform/chromium-mac/fast/blockflow/broken-ideograph-small-caps-expected.checksum: Added.
        * platform/chromium-mac/fast/blockflow/broken-ideograph-small-caps-expected.png: Added.
        * platform/chromium-mac/fast/blockflow/broken-ideograph-small-caps-expected.txt: Added.
        * platform/chromium-mac/fast/blockflow/japanese-lr-selection-expected.checksum: Added.
        * platform/chromium-mac/fast/blockflow/japanese-lr-selection-expected.png: Added.
        * platform/chromium-mac/fast/blockflow/japanese-lr-text-expected.checksum:
        * platform/chromium-mac/fast/blockflow/japanese-lr-text-expected.png:
        * platform/chromium-mac/fast/blockflow/japanese-rl-selection-expected.checksum:
        * platform/chromium-mac/fast/blockflow/japanese-rl-selection-expected.png:
        * platform/chromium-mac/fast/blockflow/japanese-rl-text-expected.checksum:
        * platform/chromium-mac/fast/blockflow/japanese-rl-text-expected.png:
        * platform/chromium-mac/fast/blockflow/japanese-rl-text-with-broken-font-expected.checksum: Removed.
        * platform/chromium-mac/fast/blockflow/japanese-rl-text-with-broken-font-expected.png: Removed.
        * platform/chromium-mac/fast/blockflow/vertical-align-table-baseline-expected.checksum: Removed.
        * platform/chromium-mac/fast/blockflow/vertical-align-table-baseline-expected.png: Removed.
        * platform/chromium-mac/fast/blockflow/vertical-baseline-alignment-expected.checksum: Added.
        * platform/chromium-mac/fast/blockflow/vertical-baseline-alignment-expected.png: Added.
        * platform/chromium-mac/fast/dynamic/text-combine-expected.checksum:
        * platform/chromium-mac/fast/dynamic/text-combine-expected.png:
        * platform/chromium-mac/fast/repaint/japanese-rl-selection-clear-expected.checksum:
        * platform/chromium-mac/fast/repaint/japanese-rl-selection-clear-expected.png:
        * platform/chromium-mac/fast/repaint/japanese-rl-selection-repaint-expected.checksum:
        * platform/chromium-mac/fast/repaint/japanese-rl-selection-repaint-expected.png:
        * platform/chromium-mac/fast/repaint/repaint-across-writing-mode-boundary-expected.checksum:
        * platform/chromium-mac/fast/repaint/repaint-across-writing-mode-boundary-expected.png:
        * platform/chromium-mac/fast/ruby/base-shorter-than-text-expected.checksum:
        * platform/chromium-mac/fast/ruby/base-shorter-than-text-expected.png:
        * platform/chromium-mac/fast/text/justify-ideograph-vertical-expected.checksum:
        * platform/chromium-mac/fast/text/justify-ideograph-vertical-expected.png:
        * platform/chromium/test_expectations.txt:
        * platform/mac/fast/blockflow/Kusa-Makura-background-canvas-expected.checksum:
        * platform/mac/fast/blockflow/Kusa-Makura-background-canvas-expected.png:
        * platform/mac/fast/blockflow/border-vertical-lr-expected.checksum:
        * platform/mac/fast/blockflow/border-vertical-lr-expected.png:
        * platform/mac/fast/blockflow/broken-ideographic-font-expected.checksum:
        * platform/mac/fast/blockflow/broken-ideographic-font-expected.png:
        * platform/mac/fast/blockflow/japanese-lr-selection-expected.checksum:
        * platform/mac/fast/blockflow/japanese-lr-selection-expected.png:
        * platform/mac/fast/blockflow/japanese-lr-text-expected.checksum:
        * platform/mac/fast/blockflow/japanese-lr-text-expected.png:
        * platform/mac/fast/blockflow/japanese-rl-selection-expected.checksum:
        * platform/mac/fast/blockflow/japanese-rl-selection-expected.png:
        * platform/mac/fast/blockflow/japanese-rl-text-expected.checksum:
        * platform/mac/fast/blockflow/japanese-rl-text-expected.png:
        * platform/mac/fast/blockflow/japanese-rl-text-with-broken-font-expected.checksum:
        * platform/mac/fast/blockflow/japanese-rl-text-with-broken-font-expected.png:
        * platform/mac/fast/blockflow/japanese-ruby-vertical-lr-expected.checksum:
        * platform/mac/fast/blockflow/japanese-ruby-vertical-lr-expected.png:
        * platform/mac/fast/blockflow/japanese-ruby-vertical-rl-expected.checksum:
        * platform/mac/fast/blockflow/japanese-ruby-vertical-rl-expected.png:
        * platform/mac/fast/blockflow/vertical-align-table-baseline-expected.checksum:
        * platform/mac/fast/blockflow/vertical-align-table-baseline-expected.png:
        * platform/mac/fast/blockflow/vertical-baseline-alignment-expected.checksum:
        * platform/mac/fast/blockflow/vertical-baseline-alignment-expected.png:
        * platform/mac/fast/blockflow/vertical-font-fallback-expected.checksum:
        * platform/mac/fast/blockflow/vertical-font-fallback-expected.png:
        * platform/mac/fast/repaint/japanese-rl-selection-clear-expected.checksum:
        * platform/mac/fast/repaint/japanese-rl-selection-clear-expected.png:
        * platform/mac/fast/repaint/japanese-rl-selection-repaint-expected.checksum:
        * platform/mac/fast/repaint/japanese-rl-selection-repaint-expected.png:
        * platform/mac/fast/repaint/repaint-across-writing-mode-boundary-expected.checksum:
        * platform/mac/fast/repaint/repaint-across-writing-mode-boundary-expected.png:
        * platform/mac/fast/ruby/base-shorter-than-text-expected.checksum:
        * platform/mac/fast/ruby/base-shorter-than-text-expected.png:
        * platform/mac/fast/text/justify-ideograph-vertical-expected.checksum:
        * platform/mac/fast/text/justify-ideograph-vertical-expected.png:
2011-03-24  Mihai Parparita  <mihaip@chromium.org>

        Reviewed by James Robinson.

        [Chromium] Vertical Japanese text is not displayed on Snow Leopard
        https://bugs.webkit.org/show_bug.cgi?id=56962

        Make Snow Leopard check added by r80740 into a runtime check for
        Chromium, since it uses the same binary on both Leopard and Snow Leopard.

        * platform/graphics/mac/FontMac.mm:
        (WebCore::hasBrokenCTFontGetVerticalTranslationsForGlyphs):
        (WebCore::showGlyphsWithAdvances):

Canonical link: https://commits.webkit.org/71731@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@81921 268f45cc-cd09-0410-ab3c-d52691b4dbfc